tests/baselines/reference/parserErrorRecovery_ParameterList5.errors.txt
parserErrorRecovery_ParameterList5.ts(1,11): error TS1005: ',' expected.
parserErrorRecovery_ParameterList5.ts(1,17): error TS1005: ')' expected.


==== parserErrorRecovery_ParameterList5.ts (2 errors) ====
    (a:number => { }
              ~~
!!! error TS1005: ',' expected.
                    
!!! error TS1005: ')' expected.